--- a/swdev/jtimekeeper/light/src/java/com/davidecavestro/timekeeper/gui/About.form
+++ b/swdev/jtimekeeper/light/src/java/com/davidecavestro/timekeeper/gui/About.form
@@ -233,24 +233,40 @@
                 </Component>
               </SubComponents>
             </Container>
-            <Component class="javax.swing.JLabel" name="jLabel10">
+            <Container class="javax.swing.JScrollPane" name="jScrollPane3">
               <Properties>
-                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="Monospaced" size="12" style="0"/>
-                </Property>
-                <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-                  <Connection code="_context.getApplicationData ().getBuildNotes ()" type="code"/>
+                <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
+                  <Border info="null"/>
                 </Property>
               </Properties>
               <AuxValues>
-                <AuxValue name="generateMnemonicsCode" type="java.lang.Boolean" value="true"/>
+                <AuxValue name="autoScrollPane" type="java.lang.Boolean" value="true"/>
               </AuxValues>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
-                  <GridBagConstraints gridX="1" gridY="4" gridWidth="1" gridHeight="1" fill="2" ipadX="0" ipadY="0" insetsTop="5" insetsLeft="5" insetsBottom="5" insetsRight="5" anchor="18" weightX="1.0" weightY="0.0"/>
+                  <GridBagConstraints gridX="1" gridY="4" gridWidth="1" gridHeight="1" fill="1" ipadX="0" ipadY="0" insetsTop="5" insetsLeft="5" insetsBottom="5" insetsRight="5" anchor="18" weightX="0.0" weightY="0.0"/>
                 </Constraint>
               </Constraints>
-            </Component>
+
+              <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
+              <SubComponents>
+                <Component class="javax.swing.JTextPane" name="jTextPane1">
+                  <Properties>
+                    <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
+                      <Border info="null"/>
+                    </Property>
+                    <Property name="editable" type="boolean" value="false"/>
+                    <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                      <Font name="Monospaced" size="12" style="0"/>
+                    </Property>
+                    <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+                      <Connection code="_context.getApplicationData ().getBuildNotes ()" type="code"/>
+                    </Property>
+                    <Property name="opaque" type="boolean" value="false"/>
+                  </Properties>
+                </Component>
+              </SubComponents>
+            </Container>
           </SubComponents>
         </Container>
         <Container class="javax.swing.JPanel" name="jPanel6">
@@ -296,7 +312,7 @@
                     </Property>
                   </Properties>
                   <AuxValues>
-                    <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="//final java.net.URL licenseURL = getClass ().getClassLoader ().getResource (&quot;license/license.html&quot;);&#xa;&#xa;//if (licenseURL != null) {&#xa;&#x9;try {&#xa;&#x9;&#x9;licenseEditorPane.read (getClass ().getResourceAsStream (&quot;/license/license.html&quot;), new HTMLDocument ());&#xa;&#x9;} catch (final IOException ioe) {&#xa;//&#x9;&#x9;System.err.println (&quot;Attempted to read a bad URL: &quot; + licenseURL + ioe);&#xa;&#x9;}&#xa;//} else {&#xa;//&#x9;System.err.println (&quot;Couldn&apos;t find file: license.html&quot;);&#xa;//}"/>
+                    <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="final java.net.URL licenseURL = getClass ().getResource (&quot;/license/license.html&quot;);&#xa;&#xa;if (licenseURL != null) {&#xa;&#x9;try {&#xa;&#x9;&#x9;licenseEditorPane.setPage (licenseURL);&#xa;&#x9;} catch (final IOException ioe) {&#xa;&#x9;&#x9;System.err.println (&quot;Attempted to read a bad URL: &quot; + licenseURL + ioe);&#xa;&#x9;}&#xa;} else {&#xa;&#x9;System.err.println (&quot;Couldn&apos;t find file: license.html&quot;);&#xa;}"/>
                   </AuxValues>
                 </Component>
               </SubComponents>
